# rust-cuda-template

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
cuda/: CMakeLists.txt  matrix.cu
cuda/bench/: CMakeLists.txt  mm.cc
cuda/include/ruda/: matrix.h
cuda/test/: CMakeLists.txt  main.c  matrix_mult_test.cc
ruda/: CMakeLists.txt  matrix.cu
src/: lib.rs
